# Boilerplate

./: .bashrc  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.setup.js  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
backend/: Cargo.toml  README.md
backend/src/: main.rs
client-api/: index.js  models.d.ts
client-api/queries/: addToDo.js  addToDo.ts  getLocaleData.js  getLocaleData.ts  getToDos.js  getToDos.ts
cmsComponents/: index.js  index.ts
cmsComponents/component/: component.js  component.module.css  component.tsx
cmsComponents/componentChildren/: componentChildren.js  componentChildren.tsx
cmsComponents/componentDialog/: componentDialog.js  componentDialog.tsx
cmsComponents/dialog/: dialog.js  dialog.tsx
cmsComponents/form/: form.js  form.tsx  formUtilities.js  formUtilities.tsx
components/: index.js
locales/: README.md  localeContext.js  localeContext.ts  variables.js
pages/: README.md  _app.js  _document.js  about.js  contact.js  index.js
server-api/: README.md
server-rust/: Cargo.toml
server-rust/data-access/: Cargo.toml  justfile
server-rust/data-access/src/: database.rs  error.rs  lib.rs  main.rs
server-rust/data-access/src/api/: login.rs  logout.rs  mod.rs  new_token.rs  todo.rs  user.rs
server-rust/data-access/src/gql/: mod.rs  mutations.rs  queries.rs
server-rust/data-access/src/graphql/: mutation.rs  query.rs
server-rust/data-access/src/model/: mod.rs  todo.rs  user.rs
server-rust/utilities/: Cargo.toml
server-rust/utilities/src/: lib.rs  test.rs
utilities/: README.md  auth.js  cms.js  cms.ts  constants.js  constants.ts  contextState.js  contextState.ts  general.js  general.test.js  general.ts  hooks.js  hooks.ts  index.js  index.ts  request.js  request.ts  types.d.ts
(+145 files in other folders)
