[package]
name = "data-access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "5.0.7", features = ["bson"]}
async-graphql-axum = "5.0.7"
axum = "0.6.14"
bson = "2.6.1"
chrono = "0.4.24"
dotenv = "0.15.0"
mongodb = "2.4.0"
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"]}
utilities = {path = "../utilities"}
