[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
pbkdf2 = { version = "0.12.1", features = ["simple"]}
rand_core = { version = "*", features = ["std"] }
serde = "1.0.159"
